objects/hed__Hierarchy_Settings__c.object
<CustomObject><fields>
        <fullName>hed__Account_Processor__c</fullName>
        <inlineHelpText>Setting for the Account model. Should be "One-to-one" or "Individual". Replaces the custom field Contact.SystemAccountProcessor__c</inlineHelpText>
        <label>Account Processor</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Accounts_Addresses_Enabled__c</fullName>
        <description>Record Types of those Accounts that should have multi-addresses enabled.</description>
        <inlineHelpText>Record Types of those Accounts that should have multi-addresses enabled.</inlineHelpText>
        <label>Multi-Address Accounts</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>hed__Accounts_to_Delete__c</fullName>
        <description>Record Types of those Accounts that should be deleted if all its children Contacts have been deleted.</description>
        <inlineHelpText>Record Types of those Accounts that should be deleted if all its children Contacts have been deleted.</inlineHelpText>
        <label>Accounts to Delete</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>hed__Affl_ProgEnroll_Del_Status__c</fullName>
        <description>Status to change an Affilation to when the related Program Enrollment is deleted, if the option selected is to change its status instead of deleting it.</description>
        <inlineHelpText>Status to change an Affilation to when the related Program Enrollment is deleted, if the option selected is to change its status instead of deleting it.</inlineHelpText>
        <label>Affl status on Prog Enrollment deletion</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Affl_ProgEnroll_Del__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if an Affiliation will be automatically deleted when the related Program Enrollment is deleted. Otherwise the status will be changed to Former.</description>
        <inlineHelpText>Determines if an Affiliation will be automatically deleted when the related Program Enrollment is deleted. Otherwise the status will be changed to Former.</inlineHelpText>
        <label>Affiliation Program Enrollment deletion</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Allow_AutoCreated_Duplicates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Auto-created Relationships are auto-deduplicated to prevent duplicate Relationship records from being created between two Contacts. Check this box to disable this behavior &amp; allow multiple Relationships of the same Type to be created between two Contacts</description>
        <inlineHelpText>Auto-created Relationships are auto-deduplicated to prevent duplicate Relationship records from being created between two Contacts.  Check this box to disable this behavior &amp; allow multiple Relationships of the same Type to be created between two Contacts</inlineHelpText>
        <label>Allow Auto-Created Duplicate Relations</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Contacts_Addresses_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Address management support for Contacts.</description>
        <inlineHelpText>Address management support for Contacts.</inlineHelpText>
        <label>Address management support for Contacts.</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Disable_Error_Handling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, HEDA's error handling framework is disabled.</description>
        <inlineHelpText>If checked, HEDA's error handling framework is disabled.</inlineHelpText>
        <label>Disable Error Handling</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Enable_Course_Connections__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables Course Connections. Requires that at least two record types exist for Course Connections to be used for the default Active Student and Faculty.</description>
        <label>Enable Course Connections</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Enable_Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Turn this on to enable debug statements in managed package code.</description>
        <inlineHelpText>Turn this on to enable debug statements in managed package code.</inlineHelpText>
        <label>Enable Debug</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Error_Notifications_On__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines whether to send error notifications.</description>
        <inlineHelpText>Check this if you'd like the system to post notifications for certain type of errors.</inlineHelpText>
        <label>Error Notifications</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Error_Notifications_To__c</fullName>
        <description>Who should receive error notifications.</description>
        <inlineHelpText>Select the type of user to send notifications to.</inlineHelpText>
        <label>Error Notification Recipients</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>hed__Faculty_RecType__c</fullName>
        <description>The default record type when creating Course Connections for a faculty member.</description>
        <label>Faculty Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Household_Addresses_RecType__c</fullName>
        <description>Account record type that supports Household Addresses behavior.</description>
        <inlineHelpText>Account record type that supports Household Addresses behavior.</inlineHelpText>
        <label>Household Addresses Acc Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Reciprocal_Method__c</fullName>
        <description>Determines method used to generate the reciprocal relationship.  Either List Setting which uses custom settings by gender, or Value Inversion, which inverts the type if appropriate ("Parent-Child" to "Child-Parent")</description>
        <inlineHelpText>Determines method used to generate the reciprocal relationship.  Either List Setting which uses custom settings by gender, or Value Inversion, which inverts the type if appropriate ("Parent-Child" to "Child-Parent")</inlineHelpText>
        <label>Reciprocal Method</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Relationship_Name_Field_Id__c</fullName>
        <description>The ID of the Name field that is dynamically generated in this org, can be found via source view when creating a new Relationship or in the URL when using the 'New Relationships' button.  Populating this value will allow the field to pre-populate when creating new Relationships from the Relationship Viewer</description>
        <inlineHelpText>Populating this value will allow the field to pre-populate when creating new Relationships from the Relationship Viewer (see description for more information)</inlineHelpText>
        <label>Relationship Name Field Id</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Relationship_Name_Id_Field_Id__c</fullName>
        <description>The ID of the Name Id field that is dynamically generated in this org, can be found via source view when creating a new Relationship or in the URL when using the 'New Relationships' button. Populating this value will allow the field to pre-populate when creating new Relationships from the Relationship Viewer</description>
        <inlineHelpText>Populating this value will allow the field to pre-populate when creating new Relationships from the Relationship Viewer (see description for more information)</inlineHelpText>
        <label>Relationship Name Id Field Id</label>
        <length>25</length>
        <type>Text</type>
    </fields><fields>
        <fullName>hed__Simple_Address_Change_Treated_as_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, changes to a single Contact or Account address field update the existing Address, rather than creating a new Address.</description>
        <inlineHelpText>If checked, changes to a single Contact or Account address field update the existing Address, rather than creating a new Address.</inlineHelpText>
        <label>Simple Address Change Treated as Update</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Store_Errors_On__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Flag that indicates whether errors are going to be stored in the database.</description>
        <inlineHelpText>Check this if you'd like errors to be stored in the database.</inlineHelpText>
        <label>Store Errors</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>hed__Student_RecType__c</fullName>
        <description>The default record type when creating Course Connections for active students.</description>
        <label>Student Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields><customSettingsType>Hierarchy</customSettingsType><description>All hierarchy settings.</description><enableFeeds>false</enableFeeds><label>Hierarchy Settings</label><visibility>Public</visibility></CustomObject>